--- a/.github/workflows/main_learningapp400.yml
+++ b/.github/workflows/main_learningapp400.yml
@@ -21,10 +21,10 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Build with dotnet
-        run: dotnet build tmp2/learningapp/learningapp.csproj --configuration Release
+        run: dotnet build learningapp/learningapp.csproj --configuration Release
 
       - name: Publish app
-        run: dotnet publish tmp2/learningapp/learningapp.csproj -c Release -o published
+        run: dotnet publish learningapp/learningapp.csproj -c Release -o published
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
